--- a/package.json
+++ b/package.json
@@ -4,14 +4,29 @@
   "description": "Личный проект «Мишка» от HTML Academy",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.0.0",
-    "autoprefixer": "10.0.2",
+    "autoprefixer": "^10.0.2",
     "browser-sync": "2.26.13",
+    "del": "^6.0.0",
     "gulp": "4.0.2",
+    "gulp-cheerio": "^1.0.0",
+    "gulp-debug": "^4.0.0",
+    "gulp-filenames": "^4.0.1",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^7.1.0",
     "gulp-less": "4.0.1",
     "gulp-plumber": "1.2.1",
     "gulp-postcss": "9.0.0",
+    "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "3.0.0",
+    "gulp-svgstore": "^7.0.1",
+    "gulp-tap": "^2.0.0",
+    "gulp-uglify": "^3.0.2",
+    "gulp-webp": "^4.0.1",
+    "path": "^0.12.7",
     "postcss": "8.1.7",
+    "postcss-csso": "^5.0.0",
+    "replace": "^1.2.0",
+    "replace-in-file": "^6.1.0",
     "stylelint": "13.7.2",
     "stylelint-config-htmlacademy": "0.1.4"
   },
@@ -19,8 +34,9 @@
     "editorconfig": "editorconfig-cli",
     "stylelint": "stylelint \"source/less/**/*.less\" --syntax less",
     "test": "npm run editorconfig && npm run stylelint",
-    "build": "gulp styles",
-    "start": "gulp"
+    "build": "gulp build",
+    "start": "gulp",
+    "student": "echo Привет студент!"
   },
   "browserslist": [
     "last 2 versions",
@@ -31,7 +47,7 @@
     "*.json",
     "*.js",
     "source/*.html",
-    "source/js/**/*.js",
+    "source.js/**/*.js",
     "source/img/**/*.svg",
     "source/less/**/*.less"
   ],
