--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "del": "^6.0.0",
     "gulp": "4.0.2",
     "gulp-cheerio": "^1.0.0",
-    "gulp-debug": "^4.0.0",
-    "gulp-filenames": "^4.0.1",
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-less": "4.0.1",
@@ -19,14 +17,10 @@
     "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "3.0.0",
     "gulp-svgstore": "^7.0.1",
-    "gulp-tap": "^2.0.0",
     "gulp-uglify": "^3.0.2",
     "gulp-webp": "^4.0.1",
-    "path": "^0.12.7",
     "postcss": "8.1.7",
     "postcss-csso": "^5.0.0",
-    "replace": "^1.2.0",
-    "replace-in-file": "^6.1.0",
     "stylelint": "13.7.2",
     "stylelint-config-htmlacademy": "0.1.4"
   },
@@ -35,8 +29,7 @@
     "stylelint": "stylelint \"source/less/**/*.less\" --syntax less",
     "test": "npm run editorconfig && npm run stylelint",
     "build": "gulp build",
-    "start": "gulp",
-    "student": "echo Привет студент!"
+    "start": "gulp"
   },
   "browserslist": [
     "last 2 versions",
